dropdown menu on small screen was clear. added background to list items to fix problem

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,8 +3,10 @@
 body {
   background-image: url(/assets/images/interlaced/interlaced.png);
   font-family: Arial, Helvetica, sans-serif;
-  
+}
 
+.nav-item{
+  background:white;
 }
 
 h2,
@@ -18,7 +20,28 @@ a {
   color: rgb(146, 144, 144) !important;
 }
 
+/*Navbar*/
 
+.navbar{
+  background:white;
+  border-bottom: solid 1px darkgray;
+  padding:0px !important;
+  height:4rem;
+}
+.navbar-brand{
+  background-color: #4aaaa5;
+  padding: 2em;
+}
+
+.navbar-brand h2{
+  color:whitesmoke;
+}
+
+/*Highlights current page link*/ 
+.active-nav-link a{
+  border-bottom: solid 2px;
+
+}
 
 /*main Header for all sections*/
 .main-header {
